# los

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md
easy-fs/: Cargo.toml
easy-fs-fuse/src/: main.rs
easy-fs/src/: efs.rs  layout.rs  lib.rs  vfs.rs
fat32-fuse/: Cargo.toml  qemu_fs.sh
fat32-fuse/riscv64/: brk  chdir  clone  close  dup  dup2  execve  exit  fork  fstat  getcwd  getdents  getpid  getppid  gettimeofday  mkdir_  mmap  mount  munmap  open  openat  pipe  read  sleep  test_echo  times  umount  uname  unlink  wait  waitpid  write  yield
fat32-fuse/src/: main.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
os/: Cargo.toml  Makefile  application.txt  build.rs  link-k210.ld  link.ld
os/.cargo/: config.toml
os/src/: config.rs  console.rs  cpu.rs  entry.asm  heap_allocator.rs  link_app.asm  loader.rs  log.rs  main.rs  paging.rs  panic.rs  plic.rs  sdcard.rs  timer.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_manager.rs  mod.rs  page_table.rs  stupid_allocator.rs
os/src/mm/heap/: heap_allocator.rs  mod.rs  stupid_allocator.rs
os/src/processor/: hart.rs  mod.rs  switch.asm  switch.rs
os/src/sbi/: legacy.rs  mod.rs
os/src/syscall/: debug.rs  device.rs  file.rs  ipc.rs  kcall.rs  mm.rs  mod.rs  proc.rs  time.rs
os/src/syscall/proc/: do_exec.rs  do_fork.rs  do_uname.rs  do_waitpid.rs  mod.rs  priority.rs
os/src/task/: kernel_stack.rs  mod.rs  pid.rs  task_context.rs  task_manager.rs  task_struct.rs  test.rs  trap_context.rs  user_stack_allocator.rs
os/src/trap/: mod.rs  trap.asm  trap.rs
os/src/util/: mod.rs
share/: Cargo.toml
share/src/: ffi.rs  file.rs  ipc.rs  lib.rs  mmap.rs  system.rs  terminal.rs  time.rs
share/src/syscall/: error.rs  mod.rs  sys_const.rs  terminal.rs
share/src/util/: mod.rs
simple_fat32/: Cargo.toml
simple_fat32/src/: block_cache.rs  fat32_manager.rs  layout.rs  lib.rs  vfs.rs
user/: Cargo.toml  Makefile  build.py  linker.ld
user/.cargo/: config.toml
user/buddy_allocator/: Cargo.toml
user/buddy_allocator/src/: frame.rs  lib.rs  test.rs
user/buddy_allocator/src/syscall/: mod.rs  raw.rs
user/drivers/k210/: Cargo.toml
user/drivers/k210/src/: dmac.rs  fpioa.rs  gpio.rs  gpiohs.rs  lib.rs  sleep.rs  spi.rs  sysctl.rs  time.rs  uarth.rs
user/drivers/rtc/: Cargo.toml
user/drivers/rtc/src/: main.rs  mods.rs  rtc.rs
user/drivers/sdcard/: Cargo.toml
user/drivers/sdcard/src/: main.rs  sdcard.rs
user/drivers/terminal/: Cargo.toml
user/drivers/terminal/src/: main.rs  standard.rs  tty.rs  uart.rs  uart_16550.rs
user/drivers/virtio-blk/: Cargo.toml
user/drivers/virtio-blk/src/: main.rs
user/fs/: Cargo.toml
user/fs/src/: main.rs
user/fs/src/device/: block.rs  character.rs  mod.rs
user/fs/src/fs/: mod.rs
user/fs/src/fs/devfs/: mod.rs  vfs_interface.rs
user/fs/src/fs/ezfs/: mod.rs  vfs_interface.rs
user/fs/src/fs/fatfs/: mod.rs  vfs_interface.rs
user/fs/src/fs/ramfs/: mod.rs  vfs_interface.rs
user/fs/src/proc/: fs_manager.rs  fs_struct.rs  mod.rs
user/fs/src/syscall/: mod.rs
user/fs/src/vfs/: dentry.rs  file.rs  filesystem.rs  inode.rs  mod.rs  super_block.rs
user/init/: Cargo.toml
user/init/src/: main.rs
user/lib/: Cargo.toml  Makefile  build.py
user/lib/.cargo/: config.toml
user/lib/src/: console.rs  entry.asm  env.rs  heap.rs  io.rs  lib.rs  panic.rs  termios.rs
user/lib/src/syscall/: mod.rs  raw.rs
user/shell/: Cargo.toml
user/shell/.cargo/: config.toml
user/shell/src/: main.rs
user/src/: console.rs  entry.asm  env.rs  heap.rs  lib.rs  panic.rs
user/src/syscall/: error.rs  mod.rs  raw.rs  syscall.rs  wrapper.rs
(+11 files in other folders)
