[package]
name = "os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
bitflags = "1.2.1"
