[package]
name = "os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
# lazy_static = { version = "1.4.0"}
# riscv = { git = "https://github.com/rust-embedded/riscv" }
spin = "0.9.2"
riscv = {git = "https://github.com/rcore-os/riscv", features = ["inline-asm"]}
bitflags = "1.2.1"
share = {path = "../share"}
xmas-elf = "0.7.0"
k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }

[features]
board_qemu = []
board_k210 = []
