[package]
name = "user_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_allocator = {path = "../buddy_allocator"}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.2"
share = {path = "../../share"}