[package]
name = "rtc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_lib = { path = "../../lib" }
share = { path = "../../../share" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
k210-pac = { path = "../k210-pac-master" }

[features]
board_qemu = []
board_k210 = []
