[package]
name = "rtc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_lib = { path = "../../lib" }
share = { path = "../../../share" }
k210 = { path = "../k210" }


[features]
board_qemu = []
board_k210 = []
