[package]
name = "sdcard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_lib = { path = "../../lib" }
share = { path = "../../../share" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
k210 = { path = "../k210" }
spin = "0.7.0"
